Edited first page of specification.

--- a/requirement_document/src/sections/01_executive_summary.tex
+++ b/requirement_document/src/sections/01_executive_summary.tex
@@ -1,6 +1,25 @@
 \section{Executive summary}
 
 \subsection{Project summary}
-Describe this project or product and its intended audience, or provide a link or reference to the project charter.
+\textbf{CodeJudger} is a platform that facilitates coding competitoins, and coding problem evaluation. 
+A collection of problems (curated by the users of the system) offered, that the users of the system
+can attempt to solve. Solving a problem will come with additional benefits (a scoreboard, achievements, etc.).
+The problems can also have additional attributes to them, which allows for a more flexible organization of the problems
+(i.e. courses, timed events, etc.).
+
+Users are allowed to solve a problem in a language of their choice, and the range of choices is large, and is
+easily extendable to allow for the addition of more languages. The integration of additional languages and/or tools
+is seamless, and doesn't allow for unintended behaviour that could lead to potential vulnerabilities.
 \subsection{Purpose and scope of this specification}
-Describe the purpose of this specification and its intended audience.   Include a description of what is within the scope what is outside of the scope of these specifications.
+The purpose of this specification is twofold:
+\begin{enumerate}
+    \item Be a faithful (as faithful as can be) representation of the system described. This means that a streamlined view of the system is attempted to be given here, and, in case of a discrepancy or lack of clarity, pointers on where to look next are given.
+    \item Serve as a planning tool. The features listed here were most probably listed here before they made it into the actual codebase.
+\end{enumerate}
+
+In order to achieve this an unambiguous and simple language is sought, and the presence of additional standardized diagrams is also a must.
+As for intentions that are out of the scope of this specification:
+\begin{enumerate}
+    \item Strictly avoiding vagueness: Some vaguenuess will creep in, and additional information (diagrams, parallels with the code) is given to hopefully alleviate the problem faced.
+    \item Serve as a final description of the project: Considering the constrained situation, this specification is envisioned to be open-ended.
+\end{enumerate}
