Requirement specification changes.

--- a/requirement_document/src/document.tex
+++ b/requirement_document/src/document.tex
@@ -19,6 +19,9 @@
  }
 
 
+\usepackage{enumitem}
+\setlist[enumerate]{itemsep=0mm}
+
 % Sec depth:
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
