--- a/requirement_document/src/document.tex
+++ b/requirement_document/src/document.tex
@@ -40,6 +40,11 @@
 %% The 'sfdefault' option to make the base font sans serif
 \renewcommand*\oldstylenums[1]{{\AlegreyaSansOsF #1}}
 
+\usepackage{lscape}
+\usepackage{array}
+\usepackage{tabularx}
+\usepackage{tabularray}
+
 % \singlespacing
 
 \setstretch{1.0}
