--- a/requirement_document/src/sections/03_requirements.tex
+++ b/requirement_document/src/sections/03_requirements.tex
@@ -6,7 +6,7 @@
     \begin{tblr}{
         colspec={|X|X[3]|X[3]|X|}, row{1} = {c}, hlines,
     }
-        Req# & Requirement & Comments & Priority \\
+        Req\# & Requirement & Comments & Priority \\
 
         FR\_1 & 
         System should allow for the access of multiple users. & 
